--- a/platformio.ini
+++ b/platformio.ini
@@ -9,9 +9,14 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:esp32dev]
-platform = espressif32
+platform = espressif32@3.5.0
 board = esp32dev
 framework = arduino
 lib_deps = madhephaestus/ESP32Servo@^1.1.1
             elektroneo/ESP32-Button@^0.1.5
+            adafruit/Adafruit MPU6050 @ ^2.0.3
+            adafruit/Adafruit Unified Sensor @ ^1.1.4
+            me-no-dev/ESP Async WebServer @ ^1.2.3
+            arduino-libraries/Arduino_JSON @ 0.1.0
+            ESP Async WebServer
 upload_port = COM[4]
