--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,4 @@ lib_deps = madhephaestus/ESP32Servo@^1.1.1
             arduino-libraries/Arduino_JSON @ 0.1.0
             ESP Async WebServer
 upload_port = COM[4]
+monitor_speed = 115200
