Format button stop

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,5 +19,9 @@ lib_deps = madhephaestus/ESP32Servo@^1.1.1
             me-no-dev/ESP Async WebServer @ ^1.2.3
             arduino-libraries/Arduino_JSON @ 0.1.0
             ESP Async WebServer
+            Wire
+            adafruit/Adafruit BusIO @ ^1.9.3
+            SPI
 upload_port = COM[4]
+lib_ldf_mode=deep
 monitor_speed = 115200
