--- a/platformio.ini
+++ b/platformio.ini
@@ -14,4 +14,4 @@ board = esp32dev
 framework = arduino
 lib_deps = madhephaestus/ESP32Servo@^1.1.1
             elektroneo/ESP32-Button@^0.1.5
-upload_port = COM8
+upload_port = /dev/cu.usbserial-2130
