--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,6 @@ lib_deps = madhephaestus/ESP32Servo@^1.1.1
             Wire
             adafruit/Adafruit BusIO @ ^1.9.3
             SPI
-upload_port = COM[4]
+upload_port = /dev/cu.usbserial-2110
 lib_ldf_mode=deep
 monitor_speed = 115200
