--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@ lib_deps = madhephaestus/ESP32Servo@^1.1.1
             Wire
             adafruit/Adafruit BusIO @ ^1.9.3
             SPI
+            mikalhart/TinyGPSPlus@^1.0.3
 upload_port = /dev/cu.usbserial-2110
 lib_ldf_mode=deep
 monitor_speed = 115200
