complete setup pid tunning testing environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,6 @@ lib_deps = madhephaestus/ESP32Servo@^1.1.1
             adafruit/Adafruit BusIO @ ^1.9.3
             SPI
             mikalhart/TinyGPSPlus@^1.0.3
-upload_port = /dev/cu.usbserial-2110
+upload_port = COM6
 lib_ldf_mode=deep
 monitor_speed = 115200
