--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "cmake.sourceDirectory": "C:/Users/DELL/Drone_GroupG/.pio/libdeps/esp32dev/Adafruit BusIO"
+    "cmake.sourceDirectory": "C:/Users/DELL/Drone_GroupG/.pio/libdeps/esp32dev/Adafruit BusIO",
+    "files.associations": {
+        "random": "cpp",
+        "*.tcc": "cpp",
+        "regex": "cpp"
+    }
 }
