--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,6 @@ lib_deps =
 	SPI
 	mikalhart/TinyGPSPlus@^1.0.3
 	mbed-syundo0730/I2Cdev@0.0.0+sha.3aa973ebe3e5
-upload_port = /dev/cu.usbserial-2120
+upload_port = COM[5]
 lib_ldf_mode = deep
 monitor_speed = 115200
